style.css
*, *::before, *::after{
    box-sizing: border-box;
}

:root{
    --width: 1000px;
    --theme: #b82828;
    --color: white;
}

body{
    background: black;
    margin: 0;
    color: var(--color);
    font-family: Arial, serif;
}

nav{
    width: 100%;
    padding: 0 calc((100% - var(--width)) / 2);
    background: var(--theme);
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 50px;
}

section{
    display: flex;
    width: var(--width);
    margin: auto;
}

#nav__logo{
    display: flex;
    align-items: center;
    column-gap: 2px;
    font-size: 28px;
}

main{
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    width: calc(var(--width) / 2 - 10px);
    row-gap: 20px;
}

aside {
    width: calc(var(--width) / 2 - 10px);
    font-size: 24px;
    display: inline-flex;
    flex-direction: column;
    row-gap: 30px;
    overflow: auto;
    height: calc(100vh - 120px);
}

.square {
    background: #202020;
    border: 1px solid gray;
    border-radius: 10px;
    width: calc((var(--width) / 2 - 10px) / var(--size) - 20px);
    height: calc((var(--width) / 2 - 10px) / var(--size) - 20px);
    font-weight: bolder;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    margin: 7px;
}

.flex-center{
    display: flex;
    align-items: center;
}

aside > div{
    column-gap: 10px;
}
aside > div > input{
    background: none;
    border: none;
    border-bottom: 2px solid var(--theme);
    width: 100px;
    color: white;
    outline: none;
    text-align: center;
    font-size: 18px;
}

.square input{
    background: none;
    border: none;
    width: 80%;
    height: 80%;
    text-align: center;
    color: white;
    font-size: calc(0.5 * ((var(--width) / 2 - 10px) / var(--size) - 20px));
    font-weight: bolder;
    outline: none;
    text-transform: capitalize;
}

aside :is(h1, h2, h4){
    margin: 0;
}

.coolbtn {
    width: fit-content;
    width: -moz-fit-content;
    background: none;
    border: 4px solid var(--theme);
    border-radius: 8px;
    padding: 15px;
    color: var(--theme);
    font-size: 18px;
    font-weight: bolder;
    cursor: pointer;
    transition: 0.2s;
}

.coolbtn:hover{
    opacity: 0.8;
}

.coolbtn:active, .coolbtn:disabled{
    opacity: 0.5;
}

label[for="name_input"]{
    font-size: 28px;
    font-weight: bolder;
}

#name_input{
    background: none;
    border: none;
    border-bottom: 3px solid var(--theme);
    font-size: 22px;
    text-align: center;
    width: 200px;
    margin-left: 20px;
    color: white;
    outline: none;
}

#wordDef{
    background: #202020;
    border: 1px solid #b0b0b0;
    position: fixed;
    top: 30%;
    transform: translate(-50%, -50%);
    left: 50%;
    right: 15%;
    width: min(500px, 80%);
    min-height: 300px;
    padding: 20px;
    display: none;
}

#wordDef h2{
    margin: 0;
}

#word__close{
    float: right;
    font-size: 24px;
    font-weight: 400;
    cursor: pointer;
    user-select: none;
}

.word__desc{
    display: flex;
    flex-direction: row;
    margin: 20px 0;
    column-gap: 10px;

}

#results ul li{
    text-decoration: underline wavy;
    cursor: pointer;
}

#results ul li:hover{
    opacity: 0.8;
}

.hear-word{
    cursor: pointer;
}


@media (max-width: 1000px){
    :root{
        --width: 100vw;
    }
}

